<resources>
    <string name="app_name">Chat Application</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="walk_through_image">Walk Through Image</string>
    <string name="walkthrough_text">Connect easily with\nyour family and friends\nover countries</string>
    <string name="start_messaging">Start Messaging</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="enter_county_code">Please confirm your country code and enter\nyour phone number</string>
    <string name="continue_text">Continue</string>
    <string name="phone_number">Phone Number</string>
    <string name="terms_privacy_policy"><![CDATA[Terms & Privacy Policy]]></string>
    <string name="back_button">Back Button</string>
    <string name="enter_code">Enter Code</string>
    <string name="resend_code">Resend Code</string>
    <string name="we_have_sent">We have sent an SMS with a code to</string>
    <string name="_6388130586">6388130586</string>
    <string name="your_profile">Your Profile</string>
    <string name="first_name_required">First Name (Required)</string>
    <string name="last_name_required">Last Name (Required)</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save">Save</string>
    <string name="chats">Chats</string>
    <string name="updates">Updates</string>
    <string name="calls">Calls</string>

    <string name="generic_permission_title">Permission required</string>
    <string name="permission_description">To use this feature, please tap on "Allow" once the next pop-up asks for permission to %s</string>
    <string name="permission_description_permanently">To use this feature, please go to app settings and give Permissions App permission to %s </string>
    <string name="read_media_images">read image files</string>
    <string name="open_camera">open camera</string>
    <string name="access_storage">access storage</string>
    <string name="read_media_files">read media files</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="no">No</string>
    <string name="alert_ok">OK</string>
    <string name="camera_icon">Camera Icon</string>
    <string name="menu_icon">menu icon</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="message">Message</string>
    <string name="_111">111</string>
    <string name="_13_04_2000">13/04/2000</string>
    <string name="add_button">Add button</string>
    <string name="user_name">NAME</string>
    <string name="text_field_hint_message">Message</string>
    <string name="button_mic">button mic</string>
    <string name="send_button">send button</string>
    <string name="attach_button">Attach Button</string>
    <string name="camera_button">Camera Button</string>
    <string name="emoji_button">Emoji Button</string>
    <string name="back_button_content">Back Button</string>
</resources>