<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.authentication.fragment.OnboardingFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/screen_padding_horizontal"
            android:paddingVertical="@dimen/screen_padding_vertical">

            <LinearLayout
                android:id="@+id/your_profile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <ImageView
                    android:id="@+id/iv_back_icon"
                    android:layout_width="@dimen/size_18"
                    android:layout_height="@dimen/size_18"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/back_button"
                    android:src="@drawable/ic_back_icon" />


                <TextView
                    android:id="@+id/tv_your_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_6sdp"
                    android:text="@string/your_profile"
                    android:textSize="@dimen/size_18"
                    android:textStyle="bold" />
            </LinearLayout>


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_profile_image"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_marginTop="@dimen/_32sdp"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/ic_profile_icon"
                app:layout_constraintBottom_toTopOf="@id/btn_save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/your_profile_layout"
                app:layout_constraintVertical_bias="0.0"
                app:shapeAppearanceOverlay="@style/RoundImageView"
                app:strokeWidth="@dimen/_2sdp" />

            <LinearLayout
                android:id="@+id/form_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_23sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_profile_image"
                app:layout_constraintVertical_bias="0.0">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_first_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/_6sdp"
                        android:text="@string/first_name"
                        android:textSize="@dimen/body02"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/_6sdp"
                        android:background="@drawable/bg_edit_text"
                        android:gravity="center_vertical"
                        android:hint="@string/first_name_required"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:paddingHorizontal="@dimen/_6sdp"
                        android:paddingVertical="@dimen/_5sdp"
                        android:textColor="?attr/TextFieldTextColor"
                        android:textColorHint="?attr/HintColor"
                        android:textSize="@dimen/size_16" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_last_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/_6sdp"
                        android:text="@string/last_name"
                        android:textSize="@dimen/body02"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/_6sdp"
                        android:background="@drawable/bg_edit_text"
                        android:gravity="center_vertical"
                        android:hint="@string/last_name_required"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:paddingHorizontal="@dimen/_6sdp"
                        android:paddingVertical="@dimen/_5sdp"
                        android:textColor="?attr/TextFieldTextColor"
                        android:textColorHint="?attr/HintColor"
                        android:textSize="@dimen/size_16" />

                </LinearLayout>


            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/ButtonBackgroundColor"
                android:paddingVertical="@dimen/padding_12"
                android:text="@string/save"
                android:textColor="@color/off_white"
                android:textSize="@dimen/subheading02"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/form_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_bar"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:indeterminate="true"
            android:layout_gravity="center"
            />
    </FrameLayout>

</layout>