<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.authentication.fragment.VerifyFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/screen_padding_horizontal"
        android:paddingVertical="@dimen/screen_padding_vertical">

        <ImageView
            android:id="@+id/iv_back_icon"
            android:layout_width="@dimen/_13sdp"
            android:layout_height="@dimen/_13sdp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_back_icon"
            android:layout_marginBottom="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_enter_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_code"
            android:textAlignment="center"
            android:textSize="@dimen/heading02"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_62sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_back_icon"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_enter_country_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enter_county_code"
            android:textSize="@dimen/size_16"
            android:layout_marginTop="@dimen/_7sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_enter_code"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/otp_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_39sdp"
            app:layout_constraintBottom_toTopOf="btn_continue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_enter_country_code" >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_otp_digit_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="center"
                android:textSize="@dimen/heading02"
                android:background="@drawable/bg_edit_text"
                android:paddingVertical="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_6sdp"
                tools:ignore="SpeakableTextPresentCheck" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_otp_digit_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="center"
                android:textSize="@dimen/heading02"
                android:background="@drawable/bg_edit_text"
                android:paddingVertical="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_6sdp"
                tools:ignore="SpeakableTextPresentCheck" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_otp_digit_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="center"
                android:textSize="@dimen/heading02"
                android:background="@drawable/bg_edit_text"
                android:paddingVertical="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_6sdp"
                tools:ignore="SpeakableTextPresentCheck" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_otp_digit_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="center"
                android:textSize="@dimen/heading02"
                android:background="@drawable/bg_edit_text"
                android:paddingVertical="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_6sdp"
                tools:ignore="SpeakableTextPresentCheck" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_otp_digit_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="center"
                android:textSize="@dimen/heading02"
                android:background="@drawable/bg_edit_text"
                android:paddingVertical="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_6sdp"
                tools:ignore="SpeakableTextPresentCheck" />


        </LinearLayout>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_14sdp"
            android:text="@string/resend_code"
            android:textSize="@dimen/subheading02"
            app:layout_constraintBottom_toTopOf="@id/btn_continue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/otp_layout"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/ButtonBackgroundColor"
            android:paddingVertical="@dimen/padding_12"
            android:text="@string/continue_text"
            android:textColor="@color/off_white"
            android:textSize="@dimen/subheading02"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otp_layout"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>